--- a/templates/Login.html
+++ b/templates/Login.html
@@ -7,6 +7,7 @@
     <title>Login - SAMU 192</title>
     <link rel="stylesheet" href="{% static 'css/login.css'%}" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
 </head>
 
 <body>
