--- a/templates/admin_app/ADM_Inicial.html
+++ b/templates/admin_app/ADM_Inicial.html
@@ -7,6 +7,7 @@
     <title>ADM - SAMU 192</title>
     <link rel="stylesheet" href="{% static 'css/adm.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     <script>
         const csrftoken = '{{ csrf_token }}';
     </script>
