--- a/templates/admin_app/user_list.html
+++ b/templates/admin_app/user_list.html
@@ -6,6 +6,8 @@
     <title>Lista - SAMU 192</title>
     <link rel="stylesheet" href="{% static 'css/user.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
