Correção de problema na view adicionar_usuário

--- a/templates/user/inicial.html
+++ b/templates/user/inicial.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio - SAMU 192</title>
+    <title>SAMU 192</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
 </head>
