--- a/templates/user/pesquisa.html
+++ b/templates/user/pesquisa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pesquisa - SAMU 192</title>
+    <title>SAMU 192</title>
     <link rel="stylesheet" href="{% static 'css/pesquisa.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
